# open-satchel

./: .gitignore  CHANGELOG.md  DEFERRED_FORMATS.md  OPEN_SATCHEL_ROADMAP.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  test.csv  test.md  tsconfig.web.json  vite.config.ts
.claude/: launch.json
docs/: MODELESS.md
harness/: index.html  main.tsx  vite.config.ts
scripts/: FINDINGS.md  _diff-contents.mts  _dump-items.mts  _dump-pages.mts  edit-test.mts  gen-icons.ps1  gen-stress-pdf.mjs
scripts/edit-tests/: align-thanks.json  move-invoice.json  rename-chinese.json  rename-guidance.json  rename-segment.json  rename-title.json
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  file.rs  font.rs  mod.rs  pdf.rs  recent.rs
src/components/editor/: CanvasTools.ts  FabricCanvas.tsx  FillSignTools.ts  FormDesignerTool.ts  HighlightTool.ts  LayersPanel.tsx  MeasureTool.ts  RulersGuides.tsx  SelectTool.ts  SignatureTool.ts  StickyNoteTool.ts  TextTool.ts
src/components/layout/: AppShell.tsx  ContentRouter.tsx  EmptyState.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx
src/components/viewer/: PageRenderer.tsx  usePdfDocument.ts
src/constants/: pageSizes.ts
src/formats/: registerAll.ts  registry.ts  types.ts
src/hooks/: useAutoSave.ts
src/lib/: actions.ts  electron-api-shim.ts  ipc.ts  shortcuts.ts  undo-redo.ts
src/main/: index.ts  menu.ts
src/preload/: api.d.ts  index.ts
src/renderer/: App.tsx  index.html
src/services/: contentStreamParser.ts  conversionService.ts  editSerializer.ts  pdfAValidation.ts  pdfAccessibility.ts  pdfCompare.ts  pdfConvert.ts  pdfFontResolution.ts  pdfForms.ts  pdfImageOps.ts  pdfOps.ts  pdfParagraphEdits.ts  pdfParagraphs.ts  pdfTextEdits.ts  pdfToWord.ts  viewerFeatures.ts
src/stores/: formatStore.ts  historyStore.ts  tabStore.ts  uiStore.ts
src/styles/: global.css
src/types/: pdf.ts  tabs.ts
test-files/: sample.eml  sample.fb2  sample.pem  sample.rtf  sample.sqlite  sample.tiff  sample.toml  sample.vtt  sample.yaml
test-pdfs/: sample.bib  sample.diff  sample.ini  sample.ipynb  sample.json  sample.srt  sample.tex  sample.xml
(+128 files in other folders)
